--- a/connexion.html
+++ b/connexion.html
@@ -10,7 +10,7 @@
     <div class="form-container">
         <div class="form-box" id="login-form">
             <h2>Se connecter</h2>
-            <form action="dashboard.php" method="POST" id="formConnexion">
+            <form action="connexion.php" method="POST" id="formConnexion">
                 <label for="email">Email :</label>
                 <input type="email" id="email" name="email" required>
                 
