Finalisation de la 2FA

--- a/formCreation.html
+++ b/formCreation.html
@@ -10,7 +10,7 @@
     <div class="form-container">
         <div class="form-box" id="register-form">
             <h2>Créer un compte</h2>
-            <form action="creation.php" method="POST" id="formCreation">
+            <form action="authentification/creation.php" method="POST" id="formCreation">
                 <label for="Nom">Nom :</label>
                 <input type="nom" id="nom" name="nom" required>
 
