Gestion de l'affichage des réservations depuis la base de données

--- a/reservation.html
+++ b/reservation.html
@@ -1,11 +1,69 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
+    <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nous Contacter</title>
 </head>
+
 <body>
+    <nav>
+        <img class = "ImageLogo" src="./Images/cinepass.jpeg" alt="Erreur">
+        <a href="index.php">Accueil</a>
+        <a href="catalogue.html">Catalogue</a>
+        <a href="reservation.html">Faire une réservation</a>
+        <a href="infos.html">Nous joindre</a>
+    </nav>
+
+    <header>
+        <h1> Réservation </h1>
+    </header>
+
+    <main>
+
+        <div class = catalogue>
     
+            <h1>Vous devez vous connecter pour faire une reservation.</h1>
+
+            <div>
+                <p>
+                    <a href="formConnexion.html">Clquez ici pour vous connecter </a>
+                </p>
+            </div>    
+
+        </div>
+        
+    </main>
+
+    <footer>
+        <div>
+            <ul>
+                <li>Reserver</li>
+                <li>À l'affiche</li>
+                <li>Ipsu m</li>
+                <li>Ipsum</li>
+            </ul>
+        </div>
+        <div>
+            <ul>
+                <li>1XX, rue du Cine Est (Movie), J1X XYZ</li>
+                <li>info@cinemapass.com</li>
+                <li>123-4566-7890</li>
+            </ul>
+        </div>
+        <div>
+            <ul>
+                <li>Billeterie physique</li>
+                <li>La billetterie ouvre a tous les jours a compter de 18:00, a compter de 12:00 le samedi et dimanche, 
+                    elle ferme 15 minutes après la dernière représentation du jour.
+                    Horaire sujet a changement sans préavis.</li>
+                <li>Lorem</li>
+                <li>Ipsum</li>
+            </ul>
+        </div>
+    </footer>
 </body>
+</html>
 </html>
