--- a/formConnexion.html
+++ b/formConnexion.html
@@ -10,6 +10,7 @@
     <div class="form-container">
         <div class="form-box" id="login-form">
             <h2>Se connecter</h2>
+
             <form action="authentification/connexion.php" method="POST" id="formConnexion">
                 <label for="email">Email :</label>
                 <input type="email" id="email" name="email" required>
@@ -19,7 +20,9 @@
                 
                 <button type="submit">Se connecter</button>
             </form>
-        </div>        
+            
+        </div>    
+        <p> Vous n'avez pas encore de compte, <a href="formCreation.html">créez -en ici </a> !</p>    
     </div>
 </body>
 </html>
