Début de gestion de l'affichage dynamique des erreurs sur les formulaires

--- a/catalogue.html
+++ b/catalogue.html
@@ -16,7 +16,7 @@
         <a href="formCreation.php">Créer un compte</a>
         <a href="formConnexion.php">Se connecter</a>
         <a href="reservation.html">Faire une réservation</a>
-        <a href="infos.php">Nous joindre</a>
+        <a href="infos.html">Nous joindre</a>
     </nav>
 
     <header>
@@ -27,7 +27,7 @@
 
         <div class = catalogue>
     
-            <h1>Vous devez vous connecter pour faire une reservation.</h1>
+            <h1>Vous devez vous connecter pour accéder à notre catalogue.</h1>
 
             <div>
                 <p>
